--- a/get_securities.ipynb
+++ b/get_securities.ipynb
@@ -54,8 +54,7 @@
         "      if kind < 2:\n",
         "        df.dropna(inplace=True)\n",
         "      jcur = res['history.cursor']\n",
-        "      jcur = jcur['data']\n",
-        "      jcur = jcur[0]\n",
+        "      jcur = jcur['data'][0]\n",
         "      lTotal = jcur[1]\n",
         "      lSize = jcur[2]\n",
         "    else:\n",
